--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -28,13 +28,13 @@ $enable-shadows: true;
 @import "bootstrap/scss/helpers";
 
 // @import "bootstrap/scss/tables";
-//@import "bootstrap/scss/forms";
+@import "bootstrap/scss/forms";
 @import "bootstrap/scss/buttons";
 //@import "bootstrap/scss/transitions";
-//@import "bootstrap/scss/dropdown";
+@import "bootstrap/scss/dropdown";
 // @import "bootstrap/scss/button-group";
-//@import "bootstrap/scss/nav";
-//@import "bootstrap/scss/navbar";
+@import "bootstrap/scss/nav";
+@import "bootstrap/scss/navbar";
 //@import "bootstrap/scss/card";
 //@import "bootstrap/scss/accordion";
 // @import "bootstrap/scss/badge";
